--- a/_includes/thoughts.html
+++ b/_includes/thoughts.html
@@ -1,4 +1,4 @@
-<h2 {% if site.style == 'dark' %}class="text-white"{% endif %}>Projects in glace</h2>
+<h2 {% if site.style == 'dark' %}class="text-white"{% endif %}>Projects in glance</h2>
 <p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">Summary on projects I've worked on.</p>
 <div class="d-sm-flex flex-wrap gutter-condensed mb-4">
   {% for post in site.posts limit: 6 %}
